--- a/posts/2018-09-26.md
+++ b/posts/2018-09-26.md
@@ -4,9 +4,9 @@ This post will be a series of posts on details about timely dataflow's internal 
 
 Here are the rough subject headings. Those with links are "done" and those without links are still in progress.
 
-0. **Background**: Timely dataflow is, perhaps obviously, a dataflow system. What this *means* is perhaps less obvious, as the term has been somewhat overused recently. We will walk through core aspects of the design of timely dataflow programs, and why we hope these decisions may lead to better (lower latency, higher throughput) computations.
+0. [**Background**](https://github.com/frankmcsherry/blog/blob/master/posts/2018-09-26.md#background-19112018): Timely dataflow is, perhaps obviously, a dataflow system. What this *means* is perhaps less obvious, as the term has been somewhat overused recently. We will walk through core aspects of the design of timely dataflow programs, and why we hope these decisions may lead to better (lower latency, higher throughput) computations.
 
-1. **Dataplane**: Timely dataflow's *dataplane* is the part of the system dedicated to moving data between workers. While this is likely an important part of any data-intensive system, it is surprisingly important in timely because of timely's data-driven execution. Where other systems can afford to marshall data and round-trip it through multiple threads (and even processes!) if we want to hit microsecond latencies we will need to do things more carefully.
+1. [**Dataplane**](https://github.com/frankmcsherry/blog/blob/master/posts/2018-09-26.md#dataplane-19112018): Timely dataflow's *dataplane* is the part of the system dedicated to moving data between workers. While this is likely an important part of any data-intensive system, it is surprisingly important in timely because of timely's data-driven execution. Where other systems can afford to marshall data and round-trip it through multiple threads (and even processes!) if we want to hit microsecond latencies we will need to do things more carefully.
 
 2. **Scheduling**: In a dataflow design the execution model can be purely data-driven: one only needs to do work in response to the arrival of data, and the work one needs to do is fairly clearly defined. This is less important in simple benchmark programs (PageRank! WordCount! YSB!) but absolutely critical in more complex programs that involve thousands of dataflow stages, or in settings where large numbers of concurrent dataflow execute.
 
@@ -134,13 +134,7 @@ The subject of this postlet is timely dataflow's "data plane", or how timely dat
 
 Systems designed as dataplane systems trim away substantial fat from the critical paths through their computations, both reducing latency and improving throughput. The most common trade-off is in run-time flexibility: having commited to specific computations, and specific work in response to received data, it is more complicated to course-correct mid-computation. In the context of a streaming data processor, we are going to take this as an acceptable trade-off (but you should always understand the trade-offs you make!).
 
-This post wil target and explain dataplane idioms, things like "zero allocation", "zero copy", and "run to completion", and how they fit in to the timely dataflow design. The goal in this post at least is to lay out some terminological groundwork, and talk through several of the changes that have been made in timely dataflow to make it a leaner system that takes full advantage of its dataflow underpinnings.
-
-#### Non-blocking
-
-Timely workers are implemented to be 100% non-blocking, in as many places as we can manage. There are some naughty corners---like memory management---where we need to yield control to the kernel, but generally we want each worker to be in a tight loop running at 100% CPU, or at least have the option to do that without interruption, if that is what it wants.
-
-This contrasts with a design in which workers might block on various resources, commonly the network for sending data, but perhaps also on "progress" in the system, perhaps awaiting a central coordinator offering work items to perform. We don't want to do that, because it prevents us from continuing to do work elsewhere.
+This post will target and explain dataplane idioms, things like "zero allocation", "zero copy", and "run to completion", and how they fit in to the timely dataflow design. The goal in this post at least is to lay out some terminological groundwork, and talk through several of the changes that have been made in timely dataflow to make it a leaner system that takes full advantage of its dataflow underpinnings.
 
 #### Zero-allocation
 
@@ -153,15 +147,15 @@ As our workers receive communications from other workers, and prepare outgoing c
 As data make their way from the network device up to user code, we have many opportunities to copy the data around. It is really easy to do. The previous version of timely dataflow's communication infrastructure had [about seven copies](https://github.com/frankmcsherry/timely-dataflow/issues/111) as data went from "received at network device" through "posted back to network device".
 But, these copies cost, and in a perfect world we would leave the data just where it landed when it arrived, and point the user code at it rather than make copies.
 
-This is in a bit of conflict with Rust's approach to ownership, in that "where it landed" is likely not memory to which we can just hand out joint ownership, but it does perhaps line up with Rust's borrowing philosophy which says "you can use this memory briefly".
+This is in a bit of conflict with Rust's approach to ownership, in that "where it landed" is likely not memory to which we can just hand out joint ownership, but it does perhaps line up with Rust's borrowing philosophy which says "you can use this memory briefly". This is something we will end up working around rather than align perfectly with.
 
 #### Run-to-completion
 
 Ideally, a worker repeatedly invokes bits of dataflow or user code that it can "run to completion". This means that the code doesn't block, but also that by the time the code has completed the input resources it needed (i.e. the data on which it acts) can now be released. This is especially valuable if these resources are scarce, for example buffers associated with the network device.
 
-This is in contrast with designs that might take the associated data and pass ownership to another thread of control, which gives up the urgency of completing the work, and requires further coordination and optimism about how promptly the work will complete.
+This is in contrast with designs that might take the associated data and pass ownership to another thread of control, which gives up the urgency of completing the work, and requires further coordination and some optimism about how promptly the work will complete.
 
-For example, our ideal `worker.step()` method might look something like this (totally made up):
+Our ideal `worker.step()` method might look something like this (totally made up):
 
 ```rust
 fn step(&mut self) {
@@ -196,7 +190,7 @@ Otherwise, it is a good plan and we will try and stick with its spirit.
 
 #### Proposal: Batched Dataplane
 
-The dataplane design above conflates two potentially distinct concepts: i. "what tasks should be scheduled" and ii. "in what order should tasks be scheduled". Each time through `worker.step()` it is important that we schedule all tasks that will receive data, so that we can release the resources backing the data, but we arguably have some flexibility about how we schedule them. We do not *need* to schedule them in the order they were received, but we (believe we) need to schedule all of them.
+The dataplane design above conflates two potentially distinct concepts: i. "what tasks should be scheduled" and ii. "in what order should tasks be scheduled". Each time through `worker.step()` it is important that we schedule all tasks that will receive data, so that we can reclaim the resources backing the data, but we arguably have some flexibility about how we schedule them. We do not *need* to schedule them in the order they were received, but we should schedule all of them.
 
 This leads to what I'm calling "batched dataplane", where in effect we write a new step 2 above:
 
@@ -211,7 +205,7 @@ This leads to what I'm calling "batched dataplane", where in effect we write a n
     }
 ```
 
-This executes dataflow operators written in a more natural style (as imperative code, rather than reactive code), scheduled as some more general scheduler sees fit, but still gives some of the significant benefits of a dataplane implementation, namely more predictable resource usage and timing.
+This allows us to execute dataflow operators written in a more natural style (as imperative code, rather than reactive code), schedule them as some more general scheduler sees fit, but still gives us some of the most significant benefits of a dataplane implementation, namely more predictable resource usage and timing.
 
 #### Proposal: `Bytes` knock-off
 
@@ -252,9 +246,9 @@ impl Bytes {
 }
 ```
 
-These methods (plus a few others that help avoid allocations) give us the ability to take large-ish contiguous allocations and slice them up according to message boundaries and hand out "owned" data backed by the shared allocation. Once each of the operators have run and their `Bytes` instances have been dropped, we should be able to `try_recover` the allocation and re-acquire to backing memory
+These methods plus `Deref` and `DerefMut` implementations (plus a few others that help avoid allocations) give us the ability to take large-ish contiguous allocations and slice them up according to message boundaries and hand out "owned" data backed by the shared allocation. Once each of the operators have run and their `Bytes` instances have been dropped, we should be able to `try_recover()` the allocation and re-acquire the backing memory
 
-Arguably, this is mostly in support of helping is dance around Rust's ownership discipline. It would have been *much* nicer to directly invoke callbacks on their associated slice of the incoming data, but I haven't seen a good ergonomic solution for that (namely, how to trick users into programming using that interface). That being said, I should probably make sure that one *can* write in that style if they are able (`todo.push(self)`).
+Arguably, this is mostly in support of helping us dance around Rust's ownership discipline. It would have been *much* nicer to directly invoke callbacks on their associated slice of the incoming data, but I haven't seen a good ergonomic solution for that (specifically, how to trick users into programming using that interface). That being said, I should probably make sure that one *can* write in that style if they are able (`todo.push(self)`).
 
 #### Proposal: Abomonation
 
@@ -264,17 +258,17 @@ If you are familiar with [abomonation](https://github.com/frankmcsherry/abomonat
 pub unsafe fn decode<T: Abomonation>(bytes: &mut [u8]) -> Option<(&T, &mut [u8])> { .. }
 ```
 
-which starts from a `&mut [u8]` and usually produces a `&T` (in the error-free case). The input bytes need to be mutable so that we can update pointers, and the resulting reference should not be mutable because the only guarantee is that the result "looks like" an instance of `T`, not that it actually is one; triggering a re-allocation of an internal vector would cause unknown (and undefined) horror. The `Abomonation` trait is only implemented for a subset of types for which we believe access to `&T` is safe (e.g. yes `Vec<_>, but not `Rc<_>`).
+which starts from a `&mut [u8]` and produces a `&T` (in the error-free case). The input bytes need to be mutable so that we can update pointers, and the resulting reference should not be mutable because the only guarantee is that the result "looks like" an instance of `T`, not that it actually is one; triggering a re-allocation of an internal vector would cause unknown (and undefined) horror. The `Abomonation` trait is only implemented for a subset of types for which we believe access to `&T` is safe (e.g. yes `Vec<_>, but not `Rc<_>`).
 
-All those caveats (and the explicit `unsafe`) this is one of the only zero-allocation, zero-copy deserialization mechanisms I'm aware of that returns references to actual Rust types, rather than proxy wrappers. Timely also supports [bincode](https://crates.io/crates/bincode) for deserialization, but it uses allocations and copies. One could look into what it would take to line up with e.g. CapnProto or FlatBuffers, but to the best of my understanding the corresponding user code would need to be written against their wrapper types rather than Rust types, which was determined to be an ergonomic non-starter.
+Despite all of those caveats (and the explicit `unsafe`) this is one of the only zero-allocation, zero-copy deserialization mechanisms I'm aware of that returns references to actual Rust types, rather than proxy wrappers. Timely also supports [bincode](https://crates.io/crates/bincode) for deserialization, but it will use allocations and copies. One could look into what it would take to line up with e.g. CapnProto or FlatBuffers, but to the best of my understanding the corresponding user code would need to be written against their wrapper types rather than Rust types, which was determined to be an ergonomic non-starter.
 
 #### In sum
 
 Bringing these pieces together, we have an approach that starts from raw binary allocations, and with no copies, no allocations, runs user operator code to completion on input `&T` data. This may come across as a bit of a tangle at the moment (surely), and the talking through is meant at least to tease out any of the weak points in the argument (e.g. why "batched dataplane" vs "just dataplane").
 
-The [zero-copy intra-process allocator](https://github.com/frankmcsherry/timely-dataflow/blob/master/communication/src/allocator/zero_copy/allocator_process.rs) lets us try this out, without actually sorting out several other dataplane issues (we would need to sneak away from kernel TCP to avoid actual copies). In this allocator, processes communicate by serializing their data to shared binary ledgers (no, not that kind) from which recipient workers deserialize.
+The [zero-copy intra-process allocator](https://github.com/frankmcsherry/timely-dataflow/blob/master/communication/src/allocator/zero_copy/allocator_process.rs) lets us try this out, without actually sorting out several other dataplane issues (we want to sneak away from kernel TCP to avoid actual copies). In this allocator, processes communicate by serializing their data to shared binary ledgers (no, not that kind) from which recipient workers deserialize.
 
-A lightly modified exchange micro-benchmark (like the above, but with more attention paid to the post-exchange operator to avoid copying the resulting buffers) stabilizes at just a few thousand total allocations, even run indefinitely. There were a few gotchas here (avoid Rust's MPSC queues, avoid un/re-boxing the backing memory), but it is at a nice spot where we can track down allocations and determine if they are truly necessary, and optimize them where appropriate.
+A lightly modified exchange micro-benchmark (like the above, but with more attention paid to the post-exchange operator to avoid copying the resulting buffers) stabilizes at just a few thousand total allocations, even run indefinitely. There were a few gotchas here (avoid Rust's MPSC queues, avoid un/re-boxing the backing memory via `Bytes` helper methods), but it is at a nice spot where we can track down allocations and determine if they are truly necessary, and optimize them where appropriate.
 
 ### Scheduling (TODO)
 
