--- a/posts/2018-09-26.md
+++ b/posts/2018-09-26.md
@@ -64,7 +64,7 @@ fn main() {
 }
 ```
 
-In this example, each worker performs the closure that begins `|worker| {`. In this program there are roughly two parts to this close: we first describe a dataflow, and we then feed that dataflow with data. We create a dataflow that reads some input, exchanges the data, prints the results, and then "probes" the result. This is going to be our computation, modest as it is. The rest of our closure feeds in some input data, varying based on `index`, and calls `worker.step()`.
+In this example, each worker performs the closure that begins `|worker| {`. In this program there are roughly two parts to this closure: we first describe a dataflow, and we then feed that dataflow with data. We create a dataflow that reads some input, exchanges the data, prints the results, and then "probes" the result. This is going to be our computation, modest as it is. The rest of our closure feeds in some input data, varying based on `index`, and calls `worker.step()`.
 
 We are trying to build one program that works for each worker, but for them to have different behaviors we will need to let them distinguish between themselves. Workers have access to a method `index()` that indicates their specific rank in the range `0 .. worker.peers()`, where the `peers()` method tells them how many workers are involved in the computation. In principle the program could look really hard at `index()` and do something totally different as a result, which will not work out well for anyone involved. We won't do this.
 
@@ -209,7 +209,7 @@ This allows us to execute dataflow operators written in a more natural style (as
 
 #### Proposal: `Bytes` knock-off
 
-There is [this `bytes` crate](https://crates.io/crates/bytes) that does a crap-ton of things, but abstractly it allows one to start from a `Vec<u8>` and peel of multiple disjoint owned "regions" of the underlying allocation. These regions can each be mutated independently, where the disjointness ensures that there will be no data races.
+There is [this `bytes` crate](https://crates.io/crates/bytes) that does a crap-ton of things, but abstractly it allows one to start from a `Vec<u8>` and peel off multiple disjoint owned "regions" of the underlying allocation. These regions can each be mutated independently, where the disjointness ensures that there will be no data races.
 
 We need something similar in that `dataz` above is more likely to be a contiguous allocation than it is to be `message`-sized independent allocations. For various reasons, it made more sense to write [a quick `bytes` knock-off](https://github.com/frankmcsherry/timely-dataflow/blob/master/bytes/src/lib.rs) than to use the existing crate (based on the provided features at the time of evaluation).
 
@@ -258,9 +258,9 @@ If you are familiar with [abomonation](https://github.com/frankmcsherry/abomonat
 pub unsafe fn decode<T: Abomonation>(bytes: &mut [u8]) -> Option<(&T, &mut [u8])> { .. }
 ```
 
-which starts from a `&mut [u8]` and produces a `&T` (in the error-free case). The input bytes need to be mutable so that we can update pointers, and the resulting reference should not be mutable because the only guarantee is that the result "looks like" an instance of `T`, not that it actually is one; triggering a re-allocation of an internal vector would cause unknown (and undefined) horror. The `Abomonation` trait is only implemented for a subset of types for which we believe access to `&T` is safe (e.g. yes `Vec<_>, but not `Rc<_>`).
+which starts from a `&mut [u8]` and produces a `&T` (in the error-free case). The input bytes need to be mutable so that we can update pointers, and the resulting reference should not be mutable because the only guarantee is that the result "looks like" an instance of `T`, not that it actually is one; triggering a re-allocation of an internal vector would cause unknown (and undefined) horror. The `Abomonation` trait is only implemented for a subset of types for which we believe access to `&T` is safe (e.g. yes `Vec<_>`, but not `Rc<_>`).
 
-Despite all of those caveats (and the explicit `unsafe`) this is one of the only zero-allocation, zero-copy deserialization mechanisms I'm aware of that returns references to actual Rust types, rather than proxy wrappers. Timely also supports [bincode](https://crates.io/crates/bincode) for deserialization, but it will use allocations and copies. One could look into what it would take to line up with e.g. CapnProto or FlatBuffers, but to the best of my understanding the corresponding user code would need to be written against their wrapper types rather than Rust types, which was determined to be an ergonomic non-starter.
+Despite all of those caveats (and the explicit `unsafe`) this is the only zero-allocation, zero-copy deserialization mechanism I'm aware of that returns references to actual Rust types, rather than proxy wrappers. Timely also supports [bincode](https://crates.io/crates/bincode) for deserialization, but it will use allocations and copies. One could look into what it would take to line up with e.g. CapnProto or FlatBuffers, but to the best of my understanding the corresponding user code would need to be written against their wrapper types rather than Rust types, which was determined to be an ergonomic non-starter.
 
 #### In sum
 
