--- a/posts/2018-11-20.md
+++ b/posts/2018-11-20.md
@@ -21,13 +21,13 @@ In the course of using differential dataflow, you may find yourself using types 
 
 Barf.
 
-These particular records have a type that is in essence `[String; 6]`, and we need to perform maps, filters, joins, grouping, and even iteration, all using types like this (with other values of `6`).
+These particular records have a type that is in essence `[String; 6]` (an array of 6 strings), and we need to perform maps, filters, joins, grouping, and even iteration, all using types like this (with other values of `6`).
 
 ### Strings work!
 
 Before anything too exciting, the `String` type totally works in differential dataflow. You can go and do graph computations where the node type is `String`, or `(Vec<String>, bool)`, or whatever crazy types you kids use to do graph processing in Javascript (lol, I know... "types").
 
-The `String` type works but it can be a bit inefficient when compared to `usize`, which is just a much simpler type to work with when we want to hash-distribute records, or sort records, or group them by keys. It is also much easier to clone a `usize` than a `String`; the latter means we must allocate some memory and most likely de-allocate it at some future point.
+The `String` type works but it can be a bit inefficient when compared to `usize`, which is just a much simpler type to work with when we want to hash-distribute records, or sort records, or group them by keys. It is also much faster to clone a `usize` than a `String`; the latter means we must allocate some memory and most likely de-allocate it at some future point.
 
 ### Interning Strings
 
@@ -35,13 +35,13 @@ While `String` works, we might like to perform something like [string interning]
 
 Instead, let's try replacing each string with a unique integer identifier. We do lose the ability to do string-y operations, like substrings and converting to upper and lower case, but we can still do equality testing and hash-distribution, and many of the core things we need to do in our data-parallel compute lifestyle.
 
-In the context of the project linked above, we can still execute Datalog programs, that only really care about exact matches between fields.
+In the context of the project linked above, we can still execute Datalog programs that only really care about exact matches between fields.
 
 Single-threaded, this would be super easy:
 
 ```rust
 /// Ensure `string` exists in `map`, return unique identifier.
-fn intern(string: String, map: &mut HashMap<String, usize>) -> usize {
+fn intern_in_map(string: String, map: &mut HashMap<String, usize>) -> usize {
     let len = map.len();
     *map.entry(string)
         .or_insert(len)
@@ -162,7 +162,7 @@ let horror: Collection<_, [String; 6]>;
 and what we want most is to assign unique identifiers to each six-tuple.
 
 ```rust
-// Use the string interning method.
+// Use the string interning method up above.
 let horror_ids = intern(&horror);
 ```
 
